[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "Zineb"
description = "Kryptone is a hight level web scapper dedicated to marketers and wrapped around the Selenium library in order to automate and simplify website auditing and scraping."
requires-python = ">= 3.13"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = [
  "scraping",
  "data-scraping",
  "web-scraping",
  "selenium",
  "webdriver",
  "automation",
  "crawler",
  "web-crawler",
  "browser-automation",
  "headless-browser",
  "data-extraction",
  "beautifulsoup",
  "requests",
  "parsing",
  "html-parsing",
  "scrapy",
  "http-client",
  "data-mining",
  "api-scraping",
  "dynamic-content",
  "python-scraper",
  "headless-scraping",
  "proxy-rotation",
  "cloudflare-bypass",
  "captcha-solving",
  "async-scraping",
  "distributed-scraping",
  "scraper-bot",
  "phantomjs",
  "webdriver-manager",
  "stealth-scraping",
  "javascript-rendering",
  "selenium-grid",
  "headless-chrome",
  "data-collection",
  "etl",
  "requests-html",
  "lxml",
  "scraping-framework",
  "python-automation"
]
dependencies = [
  "requests",
  "pyairtable>=3.0.0",
  "autopep8>==2.0.0",
  "beautifulsoup4==4.11.1",
  "boto3==1.26.8",
  "nltk==3.7",
  "numpy==1.23.4",
  "pandas==1.5.1",
  "pillow>=8.0.1",
  "psycopg==3.1.9",
  "pyaml==21.10.1",
  "pymemcache==4.0.0,
  "quart==0.18.4,
  "redis==5.2.1",
  "requests==2.28.1",
  "s3transfer==0.6.0",
  "scikit-learn==1.2.0",
  "selenium>=4.27.1
]
packages = [
  {include = "kryptone"},
  {include = "py.typed"}
]
authors = [
  {name = "John Pendenque", email = "pendenquejohn@gmail.com"},
]
maintainers = [
  {name = "John Pendenque", email = "pendenquejohn@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: MacOS"
]

[project.urls]
Homepage = "https://github.com/Zadigo/kryptone"
Documentation = "https://github.com/Zadigo/kryptone/wiki"
Repository = "https://github.com/Zadigo/kryptone.git"
Changelog = "https://github.com/Zadigo/kryptone/blob/main/CHANGELOG.md"
